--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -34,6 +34,7 @@
   align-items: center;
   width: 100%;
   height: 26px;
+  padding-inline: 10px;
   cursor: pointer;
   touch-action: none;
 }
